--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN"
       crossorigin="anonymous"
     />
-    <title>City Tours</title>
+    <title>Maziar Co.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
